# CameraKiosk

./: .gitignore  README.md
include/: KioskHandler.h
libs/GpCamera/: CMakeLists.txt
libs/GpCamera/include/GpCamera/: CubeEyeDriver.h  CubeEyeWrapper.h  EcCubeEyeProps.h  FrameParser.h  GpCamera.h  GpCommon.h
libs/GpCamera/src/: CubeEyeDriver.cpp  EcCubeEyeProps.cpp  FrameParser.cpp  GpCamera.cpp
libs/HwManager/: CMakeLists.txt
libs/HwManager/include/HwManager/: Balancer.h  GpioDriver.h  SerialDriver.h
libs/HwManager/src/: Balancer.cpp  GpioDriver.cpp  SerialDriver.cpp
libs/Json/: CMakeLists.txt
libs/Json/include/Json/: builder.h
libs/Json/src/: builder.cpp
libs/KioskFSM/: CMakeLists.txt
libs/KioskFSM/include/KioskFSM/: DetectEvent.h  Enums.h  ExtractEvent.h  InitEvent.h  KioskInterface.h  MoveEvent.h
libs/KioskFSM/src/: DetectEvent.cpp  ExtractEvent.cpp  InitEvent.cpp  KioskInterface.cpp  MoveEvent.cpp
libs/Util/: CMakeLists.txt
libs/Util/include/: SocketEnum.h
libs/Util/include/Util/: Socket.h  SocketException.h  ThreadPool.h
libs/Util/src/: SocketAcceptor.cpp  SocketCommunicator.cpp  SocketException.cpp  SocketHandler.cpp  ThreadPool.cpp
src/: KioskHandler.cpp  main.cpp
